erster Versuch, effekte abzuspielen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,18 @@
         android:background="@drawable/gebaeudee"
         tools:context=".viewmodel.MainActivity">
 
+
+        <de.gruppe.e.klingklang.view.GreenClickAnimationView
+            android:id="@+id/green_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
         <!--Vertical  guidelines  -->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_XB_1"
@@ -547,6 +559,17 @@
             app:srcCompat="@drawable/ic_baseline_change_circle_24"
             tools:layout_editor_absoluteX="34dp"
             tools:layout_editor_absoluteY="21dp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="72dp"
+            android:layout_marginTop="40dp"
+            android:text="Button"
+            android:onClick="doIt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline_LC_Y3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
