--- a/app/src/main/res/layout/fassade_3.xml
+++ b/app/src/main/res/layout/fassade_3.xml
@@ -15,6 +15,7 @@
         tools:context=".MainActivity">
 
         <!--Vertical  guidelines  -->
+
         <ImageButton
             android:id="@+id/record_button"
             android:layout_width="wrap_content"
@@ -28,34 +29,6 @@
             app:srcCompat="@drawable/start_recording" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.2" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.28" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.336" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.41" />
-
-        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,51 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.545" />
-
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.61" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.68" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
             app:layout_constraintGuide_percent="0.74" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.9" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.81" />
-
-        <!-- horizontal guidelines  -->
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.7" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_Y"
@@ -120,162 +49,40 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.95" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.67" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.6" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.57" />
 
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y5"
+            android:id="@+id/guideline_X"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.52" />
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9" />
+
+
+        <!-- horizontal guidelines  -->
+
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y6"
+            android:id="@+id/guideline_Y9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.48" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.41" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_Y8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.365" />
+            app:layout_constraintGuide_percent="0.21" />
 
 
 
         <!-- Buttons-->
-
-
-        <Button
-            android:id="@+id/button1"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
-            app:layout_constraintStart_toStartOf="@id/guideline_X1"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y2"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button2"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
-            app:layout_constraintStart_toStartOf="@id/guideline_X3"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y2"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button3"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
-            app:layout_constraintStart_toStartOf="@id/guideline_X7"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y2"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button4"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X10"
-            app:layout_constraintStart_toStartOf="@id/guideline_X9"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y2"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button5"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y3"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
-            app:layout_constraintStart_toStartOf="@id/guideline_X3"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y4"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button6"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y3"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
-            app:layout_constraintStart_toStartOf="@id/guideline_X7"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y4"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-
-        <Button
-            android:id="@+id/button7"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y6"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X4"
-            app:layout_constraintStart_toStartOf="@id/guideline_X3"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/button8"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y5"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y6"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
-            app:layout_constraintStart_toStartOf="@id/guideline_X7"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-
-        <Button
-            android:id="@+id/button9"
-            style="@style/windowbutton_style"
-            android:background="@drawable/roundedbutton"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_Y7"
-            app:layout_constraintTop_toTopOf="@id/guideline_Y8"
+        <View
+            android:id="@+id/f3_button9"
+            android:tag="jazz_riff.sf2,0"
+            android:background="@drawable/f3_sound_transition"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:0.5"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toTopOf="@id/guideline_Y9"
+            android:layout_width="0dp"  android:layout_height="0dp"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
 
 
         <ImageButton
